Fix responsiveness of header & carousel ide so content does not spill over the container

--- a/assets/sass/_mixins.scss
+++ b/assets/sass/_mixins.scss
@@ -5,3 +5,11 @@
 @mixin bg-gradient($from-color, $to-color, $radius, $center-x: 50%, $center-y: 50%) {
     background-image: radial-gradient($radius at $center-x $center-y, $from-color, $to-color);
 }
+
+@mixin order($number) {
+	-webkit-box-ordinal-group: $number;
+	-moz-box-ordinal-group: $number;
+	-ms-flex-order: $number;
+	-webkit-order: $number;
+	order: $number;
+}
